--- a/replica-releases/9c42c7c0cdc44dc95a4a2d7685d512786c3fb0e2.md
+++ b/replica-releases/9c42c7c0cdc44dc95a4a2d7685d512786c3fb0e2.md
@@ -5,7 +5,7 @@ This release is based on changes since [release\-2024\-08\-29\_01\-30\-base](htt
 
 Please note that some commits may be excluded from this release if they're not relevant, or not modifying the GuestOS image. Additionally, descriptions of some changes might have been slightly modified to fit the release notes format.
 
-To see a full list of commits added since last release, compare the revisions on [GitHub](https://github.com/dfinity/ic/compare/release-2024-08-29_01-30-base...release-2024-08-29_01-30-canister-snapshots).
+To see a full list of commits added since the last release, compare the revisions on [GitHub](https://github.com/dfinity/ic/compare/release-2024-08-29_01-30-base...release-2024-08-29_01-30-canister-snapshots).
 
 Features:
 ---------
