--- a/replica-releases/c47e172dfd13d07e864742fea93188c3e9dc81fd.md
+++ b/replica-releases/c47e172dfd13d07e864742fea93188c3e9dc81fd.md
@@ -10,4 +10,4 @@ To see a full list of commits added since last release, compare the revisions on
 Other changes:
 --------------
 
-* [`c47e172df`](https://github.com/dfinity/ic/commit/c47e172df) Node: Squashed commit of the following:
+* [`c47e172df`](https://github.com/dfinity/ic/commit/c47e172df) Node: Use Linux Kernel 6.11 in GuestOS
