--- a/replica-releases/a3478d571670053ebd09b9771bec489ef69425fa.md
+++ b/replica-releases/a3478d571670053ebd09b9771bec489ef69425fa.md
@@ -38,7 +38,7 @@ Bugfixes:
 * [`b679ad3a3`](https://github.com/dfinity/ic/commit/b679ad3a3) Interface,Networking: Remove the async lock in the AdapterMetricsRegistry ([\#2613](https://github.com/dfinity/ic/pull/2613))
 * [`1c2346cab`](https://github.com/dfinity/ic/commit/1c2346cab) Node: HSM onboarding ([\#2636](https://github.com/dfinity/ic/pull/2636))
 
-Performance improvements:
+Benchmarking:
 -------------------------
 
 * [`211a01015`](https://github.com/dfinity/ic/commit/211a01015) Execution,Interface: Add criterion load benchmark ([\#2587](https://github.com/dfinity/ic/pull/2587))
@@ -55,7 +55,6 @@ Chores:
 * [`2f00d6815`](https://github.com/dfinity/ic/commit/2f00d6815) Execution,Interface: Optimize evict\_sandbox\_processes ([\#2653](https://github.com/dfinity/ic/pull/2653))
 * [`a10fbc291`](https://github.com/dfinity/ic/commit/a10fbc291) Execution,Interface(fuzzing): Reconstruct system API imports using Wasmtime::Linker ([\#2575](https://github.com/dfinity/ic/pull/2575))
 * [`0d14c11bd`](https://github.com/dfinity/ic/commit/0d14c11bd) Execution,Interface,Message Routing: fixing typos and cleanups ([\#2682](https://github.com/dfinity/ic/pull/2682))
-* [`593f0cd19`](https://github.com/dfinity/ic/commit/593f0cd19) Interface(FI): Cleanup unused dependencies ([\#2628](https://github.com/dfinity/ic/pull/2628))
 * [`0eedbb674`](https://github.com/dfinity/ic/commit/0eedbb674) Interface,Message Routing: Always use request metadata in backward compatibility test ([\#2690](https://github.com/dfinity/ic/pull/2690))
 * [`aacbed376`](https://github.com/dfinity/ic/commit/aacbed376) Interface,Message Routing: Trim canonical state framework ([\#2539](https://github.com/dfinity/ic/pull/2539))
 * [`7dd4dfe62`](https://github.com/dfinity/ic/commit/7dd4dfe62) Interface,Networking: add a jaeger exporter package/crate ([\#2691](https://github.com/dfinity/ic/pull/2691))
@@ -63,10 +62,7 @@ Chores:
 * [`45dca07dd`](https://github.com/dfinity/ic/commit/45dca07dd) Interface,Networking: Do not shutdown the joinset when the event loop exists in the request handler ([\#2649](https://github.com/dfinity/ic/pull/2649))
 * [`72ec446d6`](https://github.com/dfinity/ic/commit/72ec446d6) Interface,Networking: Add additional logging in the case when the version message is not valid ([\#2596](https://github.com/dfinity/ic/pull/2596))
 * [`f96dec1db`](https://github.com/dfinity/ic/commit/f96dec1db) Interface,Node(node): Remove setupos/hostos network bonding and clean up docs ([\#2579](https://github.com/dfinity/ic/pull/2579))
-* [`ecbb91ede`](https://github.com/dfinity/ic/commit/ecbb91ede) Owners: Create oci tarball for nginx\-proxy ([\#2714](https://github.com/dfinity/ic/pull/2714))
-* [`94640f9af`](https://github.com/dfinity/ic/commit/94640f9af) Owners: Add nginx\-proxy to mirror images ([\#2711](https://github.com/dfinity/ic/pull/2711))
 * [`c43bd9b0c`](https://github.com/dfinity/ic/commit/c43bd9b0c) Owners: Bump ic\-cdk\-timers ([\#2654](https://github.com/dfinity/ic/pull/2654))
-* [`72dcfc4fe`](https://github.com/dfinity/ic/commit/72dcfc4fe) Owners(psec): Bump NPM version of oisy\-wallet to 22 ([\#2671](https://github.com/dfinity/ic/pull/2671))
 * [`7dd4fd0f8`](https://github.com/dfinity/ic/commit/7dd4fd0f8) Node: Update Base Image Refs \[2024\-11\-20\-2036] ([\#2727](https://github.com/dfinity/ic/pull/2727))
 * [`c00695e45`](https://github.com/dfinity/ic/commit/c00695e45) Node: Update Base Image Refs \[2024\-11\-20\-0147] ([\#2705](https://github.com/dfinity/ic/pull/2705))
 * [`0d127b8fd`](https://github.com/dfinity/ic/commit/0d127b8fd) Node: Add log\_and\_halt\_installation\_on\_error sleep ([\#2605](https://github.com/dfinity/ic/pull/2605))
@@ -77,9 +73,6 @@ Refactoring:
 
 * [`81686f56f`](https://github.com/dfinity/ic/commit/81686f56f) Crypto,Interface(crypto): Move ExtendedDerivationPath to ic\_types::crypto ([\#2676](https://github.com/dfinity/ic/pull/2676))
 * [`3397eb8bf`](https://github.com/dfinity/ic/commit/3397eb8bf) Crypto,Interface(crypto): Inline ThresholdSigDataStoreImpl::new\_with\_max\_size ([\#2625](https://github.com/dfinity/ic/pull/2625))
-* [`6da35b943`](https://github.com/dfinity/ic/commit/6da35b943) Interface: Support ICP blocks and accounts in InMemoryLedger ([\#2497](https://github.com/dfinity/ic/pull/2497))
-* [`cdc498924`](https://github.com/dfinity/ic/commit/cdc498924) Interface(ckbtc): minor refactor of FetchEnv ([\#2611](https://github.com/dfinity/ic/pull/2611))
-* [`2b2123622`](https://github.com/dfinity/ic/commit/2b2123622) Interface(ICP\_ledger): Rename ledger suite memory\-related metrics ([\#2545](https://github.com/dfinity/ic/pull/2545))
 * [`dab484292`](https://github.com/dfinity/ic/commit/dab484292) Interface,Node(node): rename use\_nns\_public\_key and use\_node\_operator\_private\_key ([\#2700](https://github.com/dfinity/ic/pull/2700))
 * [`03f3debdf`](https://github.com/dfinity/ic/commit/03f3debdf) Node: move node\_index to ic.json ([\#1947](https://github.com/dfinity/ic/pull/1947))
 
@@ -141,3 +134,10 @@ Tests:
 ### Scope of the change (sns) is not related to GuestOS
 * [`3c22b95be`](https://github.com/dfinity/ic/commit/3c22b95be) Interface(sns): Automatically trigger upgrades when target\_version is ahead of the current version ([\#2034](https://github.com/dfinity/ic/pull/2034))
 * [`c4939ee3e`](https://github.com/dfinity/ic/commit/c4939ee3e) Interface(sns): Add test that all SNS canisters can be upgraded using the advance\-target\-version mechanism ([\#2722](https://github.com/dfinity/ic/pull/2722))
+* [`6da35b943`](https://github.com/dfinity/ic/commit/6da35b943) Interface: Support ICP blocks and accounts in InMemoryLedger ([\#2497](https://github.com/dfinity/ic/pull/2497))
+* [`cdc498924`](https://github.com/dfinity/ic/commit/cdc498924) Interface(ckbtc): minor refactor of FetchEnv ([\#2611](https://github.com/dfinity/ic/pull/2611))
+* [`2b2123622`](https://github.com/dfinity/ic/commit/2b2123622) Interface(ICP\_ledger): Rename ledger suite memory\-related metrics ([\#2545](https://github.com/dfinity/ic/pull/2545))
+* [`ecbb91ede`](https://github.com/dfinity/ic/commit/ecbb91ede) Owners: Create oci tarball for nginx\-proxy ([\#2714](https://github.com/dfinity/ic/pull/2714))
+* [`94640f9af`](https://github.com/dfinity/ic/commit/94640f9af) Owners: Add nginx\-proxy to mirror images ([\#2711](https://github.com/dfinity/ic/pull/2711))
+* [`72dcfc4fe`](https://github.com/dfinity/ic/commit/72dcfc4fe) Owners(psec): Bump NPM version of oisy\-wallet to 22 ([\#2671](https://github.com/dfinity/ic/pull/2671))
+* [`593f0cd19`](https://github.com/dfinity/ic/commit/593f0cd19) Interface(FI): Cleanup unused dependencies ([\#2628](https://github.com/dfinity/ic/pull/2628))
