--- a/replica-releases/7147f471c7ac27f518e6c0eeb2015952b5e93e1b.md
+++ b/replica-releases/7147f471c7ac27f518e6c0eeb2015952b5e93e1b.md
@@ -12,7 +12,7 @@ Features:
 
 * [`49d6101af`](https://github.com/dfinity/ic/commit/49d6101af) Consensus,Interface: Call crypto in vetKD payload builder ([#3905](https://github.com/dfinity/ic/pull/3905))
 * [`7dda5ff7f`](https://github.com/dfinity/ic/commit/7dda5ff7f) Consensus,Interface: Don't use rsync to copy the state during recoveries ([#3853](https://github.com/dfinity/ic/pull/3853))
-* [`3deb76dff`](https://github.com/dfinity/ic/commit/3deb76dff) Consensus,Interface: Mihailjianu1/bitcoin serialize blocks first ([#3919](https://github.com/dfinity/ic/pull/3919))
+* [`3deb76dff`](https://github.com/dfinity/ic/commit/3deb76dff) Consensus,Interface: Bitcoin serialize blocks first ([#3919](https://github.com/dfinity/ic/pull/3919))
 * [`5d0fcce40`](https://github.com/dfinity/ic/commit/5d0fcce40) Execution,Interface: Bump allowed code section size ([#4012](https://github.com/dfinity/ic/pull/4012))
 * [`20b0caf9e`](https://github.com/dfinity/ic/commit/20b0caf9e) Execution,Interface: Add a metric tracking Wasm code section sizes ([#3983](https://github.com/dfinity/ic/pull/3983))
 * [`396b461cd`](https://github.com/dfinity/ic/commit/396b461cd) Interface,Message Routing: Add size limits as fields to the stream builder ([#3885](https://github.com/dfinity/ic/pull/3885))
