--- a/replica-releases/c6d90cb33f3d47f808aaaf227a1678cb812d74a2.md
+++ b/replica-releases/c6d90cb33f3d47f808aaaf227a1678cb812d74a2.md
@@ -11,4 +11,4 @@ To see a full list of commits added since last release, compare the revisions on
 Other changes:
 --------------
 
-* [`c6d90cb33`](https://github.com/dfinity/ic/commit/c6d90cb33) Execution,Interface: turn on feature flag
+* [`c6d90cb33`](https://github.com/dfinity/ic/commit/c6d90cb33) Execution,Interface: turn on canister snapshot download and upload feature flag
