Apply suggestion from @sasa-tomic

--- a/replica-releases/ab62c6ec1c3b5f492df53c05bb0bf5f2eb6298ba.md
+++ b/replica-releases/ab62c6ec1c3b5f492df53c05bb0bf5f2eb6298ba.md
@@ -11,4 +11,4 @@ To see a full list of commits added since last release, compare the revisions on
 Features:
 ---------
 
-* [`ab62c6ec1`](https://github.com/dfinity/ic/commit/ab62c6ec1) Crypto,Interface(crypto): in-memory canister secret key store (squashed)
+* [`ab62c6ec1`](https://github.com/dfinity/ic/commit/ab62c6ec1) Crypto,Interface(crypto): in-memory canister secret key store
