Add note on repro_check

--- a/replica-releases/035a2c7a2b19bc7ce7c4d977169583eb64b0e3cb.md
+++ b/replica-releases/035a2c7a2b19bc7ce7c4d977169583eb64b0e3cb.md
@@ -86,6 +86,9 @@ To see a full list of commits added since last release, compare the revisions on
 ## Documentation:
 ## Other changes:
 
+---
+**Note**: As of [`af40c80b4`](https://github.com/dfinity/ic/commit/af40c80b4), `repro-check` now includes validation of GuestOS measurements automatically.
+
 ## Excluded Changes
 
 ### Changed files are excluded by file path filter
