--- a/replica-releases/6369f81e543ab56eb9532b4d67b88239742481fd.md
+++ b/replica-releases/6369f81e543ab56eb9532b4d67b88239742481fd.md
@@ -1,8 +1,7 @@
 Release Notes for [release-2026-02-12_20-24-hotfix-populate-nns-key](https://github.com/dfinity/ic/tree/release-2026-02-12_20-24-hotfix-populate-nns-key) (`6369f81e543ab56eb9532b4d67b88239742481fd`)
 This release is based on changes since [release-2026-02-12_20-24-base](https://dashboard.internetcomputer.org/release/c016162d2861e5ad6260d4f62c511a3e5cef5a31) (`c016162d2861e5ad6260d4f62c511a3e5cef5a31`).
 
-Please note that some commits may be excluded from this release if they're not relevant, or not modifying the GuestOS image.
-Additionally, descriptions of some changes might have been slightly modified to fit the release notes format.
+This hotfix addresses an issue introduced in [`b3ad05435820c4fe5d89ecdd4f40a711d6078d00`](https://github.com/dfinity/ic/commit/b3ad05435820c4fe5d89ecdd4f40a711d6078d00) that prevents SEV-enabled nodes from upgrading to the next release.
 
 To see a full list of commits added since last release, compare the revisions on [GitHub](https://github.com/dfinity/ic/compare/release-2026-02-12_20-24-base...release-2026-02-12_20-24-hotfix-populate-nns-key).
 ## Bugfixes:
